[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.19"
alloy-provider = "=0.9.2"
alloy-signer = "0.9.2"
anyhow = "1.0.95"
dotenv = "0.15.0"
tokio = "1.43.0"
k256 = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.8.5"
hex = "0.4.3"
tiny-bip39 = "2.0.0"
hmac = "0.12.1"
hdpath = "0.6.3"
